[gd_scene load_steps=4 format=3 uid="uid://bpo2305wv6aun"]

[ext_resource type="StyleBox" uid="uid://cayqsvqoku223" path="res://resources/styles/2pxborderstyle.tres" id="1_oodmp"]
[ext_resource type="Script" path="res://scenes/unitBox.gd" id="1_tssx8"]
[ext_resource type="Texture2D" uid="uid://co0kbh34omf16" path="res://resources/sprites/Real Heir.png" id="2_ef1vw"]

[node name="unitBox" type="CanvasLayer"]
script = ExtResource("1_tssx8")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 16.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2

[node name="unitBoxPanel" type="Panel" parent="Control"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
offset_left = -64.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_styles/panel = ExtResource("1_oodmp")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 492.0
grow_horizontal = 0
theme_override_constants/separation = 12

[node name="Container" type="Container" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer" groups=["unitContainer"]]
custom_minimum_size = Vector2(40, 42)
layout_mode = 2
size_flags_vertical = 4

[node name="TextureButton" type="TextureButton" parent="Control/VBoxContainer/MarginContainer"]
layout_mode = 2
texture_normal = ExtResource("2_ef1vw")
stretch_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="Control/VBoxContainer" groups=["unitContainer"]]
visible = false
custom_minimum_size = Vector2(40, 42)
layout_mode = 2
size_flags_vertical = 4

[node name="TextureButton" type="TextureButton" parent="Control/VBoxContainer/MarginContainer2"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("2_ef1vw")
stretch_mode = 5

[node name="MarginContainer3" type="MarginContainer" parent="Control/VBoxContainer" groups=["unitContainer"]]
visible = false
custom_minimum_size = Vector2(40, 42)
layout_mode = 2
size_flags_vertical = 4

[node name="TextureButton" type="TextureButton" parent="Control/VBoxContainer/MarginContainer3"]
z_index = 2
layout_mode = 2
texture_normal = ExtResource("2_ef1vw")
stretch_mode = 5

[node name="MarginContainer4" type="MarginContainer" parent="Control/VBoxContainer" groups=["unitContainer"]]
visible = false
custom_minimum_size = Vector2(40, 42)
layout_mode = 2
size_flags_vertical = 4

[node name="TextureButton" type="TextureButton" parent="Control/VBoxContainer/MarginContainer4"]
z_index = 3
layout_mode = 2
texture_normal = ExtResource("2_ef1vw")
stretch_mode = 5

[node name="MarginContainer5" type="MarginContainer" parent="Control/VBoxContainer" groups=["unitContainer"]]
visible = false
custom_minimum_size = Vector2(40, 42)
layout_mode = 2
size_flags_vertical = 4

[node name="TextureButton" type="TextureButton" parent="Control/VBoxContainer/MarginContainer5"]
z_index = 4
layout_mode = 2
texture_normal = ExtResource("2_ef1vw")
stretch_mode = 5

[node name="MarginContainer6" type="MarginContainer" parent="Control/VBoxContainer" groups=["unitContainer"]]
visible = false
custom_minimum_size = Vector2(40, 42)
layout_mode = 2
size_flags_vertical = 4

[node name="TextureButton" type="TextureButton" parent="Control/VBoxContainer/MarginContainer6"]
z_index = 5
layout_mode = 2
texture_normal = ExtResource("2_ef1vw")
stretch_mode = 5

[node name="MarginContainer7" type="MarginContainer" parent="Control/VBoxContainer" groups=["unitContainer"]]
visible = false
custom_minimum_size = Vector2(40, 42)
layout_mode = 2
size_flags_vertical = 4

[node name="TextureButton" type="TextureButton" parent="Control/VBoxContainer/MarginContainer7"]
z_index = 6
layout_mode = 2
texture_normal = ExtResource("2_ef1vw")
stretch_mode = 5

[node name="MarginContainer8" type="MarginContainer" parent="Control/VBoxContainer" groups=["unitContainer"]]
visible = false
custom_minimum_size = Vector2(40, 42)
layout_mode = 2
size_flags_vertical = 4

[node name="TextureButton" type="TextureButton" parent="Control/VBoxContainer/MarginContainer8"]
z_index = 7
layout_mode = 2
texture_normal = ExtResource("2_ef1vw")
stretch_mode = 5

[node name="MarginContainer9" type="MarginContainer" parent="Control/VBoxContainer" groups=["unitContainer"]]
visible = false
custom_minimum_size = Vector2(40, 42)
layout_mode = 2
size_flags_vertical = 4

[node name="TextureButton" type="TextureButton" parent="Control/VBoxContainer/MarginContainer9"]
z_index = 8
layout_mode = 2
texture_normal = ExtResource("2_ef1vw")
stretch_mode = 5

[node name="MarginContainer10" type="MarginContainer" parent="Control/VBoxContainer" groups=["unitContainer"]]
visible = false
custom_minimum_size = Vector2(40, 42)
layout_mode = 2
size_flags_vertical = 4

[node name="TextureButton" type="TextureButton" parent="Control/VBoxContainer/MarginContainer10"]
z_index = 9
layout_mode = 2
texture_normal = ExtResource("2_ef1vw")
stretch_mode = 5

[node name="MarginContainer11" type="MarginContainer" parent="Control/VBoxContainer" groups=["unitContainer"]]
visible = false
custom_minimum_size = Vector2(40, 42)
layout_mode = 2
size_flags_vertical = 4

[node name="TextureButton" type="TextureButton" parent="Control/VBoxContainer/MarginContainer11"]
z_index = 10
layout_mode = 2
texture_normal = ExtResource("2_ef1vw")
stretch_mode = 5

[node name="MarginContainer12" type="MarginContainer" parent="Control/VBoxContainer" groups=["unitContainer"]]
visible = false
custom_minimum_size = Vector2(40, 42)
layout_mode = 2
size_flags_vertical = 4

[node name="TextureButton" type="TextureButton" parent="Control/VBoxContainer/MarginContainer12"]
z_index = 10
layout_mode = 2
texture_normal = ExtResource("2_ef1vw")
stretch_mode = 5

[connection signal="pressed" from="Control/VBoxContainer/MarginContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer2/TextureButton" to="." method="_on_texture_button_pressed_1"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer3/TextureButton" to="." method="_on_texture_button_pressed_2"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer4/TextureButton" to="." method="_on_texture_button_pressed_3"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer5/TextureButton" to="." method="_on_texture_button_pressed_4"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer6/TextureButton" to="." method="_on_texture_button_pressed_5"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer7/TextureButton" to="." method="_on_texture_button_pressed_6"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer8/TextureButton" to="." method="_on_texture_button_pressed_7"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer9/TextureButton" to="." method="_on_texture_button_pressed_8"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer10/TextureButton" to="." method="_on_texture_button_pressed_9"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer11/TextureButton" to="." method="_on_texture_button_pressed_10"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer12/TextureButton" to="." method="_on_texture_button_pressed_11"]
